sandbox/output
TicketDispenser.java:5: error: TurnNumberSequence is abstract; cannot be instantiated
        this(new TurnNumberSequence());
             ^
1 error
